# cyrus

./: .barfrc  .env.example  .gitignore  README.md  SPRINT_ISSUES.md  SPRINT_PLAN.md  build-release.ps1  cyrus_brain.py  cyrus_hook.py  cyrus_voice.py  install-brain.bat  install-brain.ps1  install-brain.sh  install-voice.bat  install-voice.ps1  install-voice.sh  issue_template.md  main.py  probe_uia.py  requirements.txt  test_permission_scan.py
cyrus2/: .coverage  .env.example  Dockerfile  README.md  cyrus_brain.py  cyrus_common.py  cyrus_config.py  cyrus_hook.py  cyrus_log.py  cyrus_server.py  cyrus_voice.py  docker-compose.yml  main.py  probe_uia.py  pyproject.toml  requirements-brain-headless.txt  requirements-brain.txt  requirements-dev.txt  requirements-voice.txt  requirements.txt  test_permission_scan.py
cyrus2/plans/: 019-Write-test-text-processing.md  022-Write-test-hook.md  024-Write-test-vad-logic.md
cyrus2/tests/: __init__.py  conftest.py  test_001_pyproject_config.py  test_004_requirements_pinning.py  test_007_command_handlers.py  test_008_init_functions.py  test_009_cyrus_log.py  test_010_print_replacement.py  test_011_cyrus_voice_logging.py  test_012_cyrus_server_logging.py  test_013_threading_locks.py  test_015_focus_verification.py  test_016_file_handle_leak.py  test_017_permission_logging.py  test_018_conftest.py  test_027_cyrus_config.py  test_028_tcp_auth.py  test_029_brain_host_configurable.py  test_030_headless_mode.py  test_034_brain_registration_listener.py  test_035_docker_files.py  test_036_health_check.py  test_037_whisper_model_config.py  (+10 more)
(+240 files in other folders)
