[project]
name = "cyrus"
version = "2.0.0"
description = "Cyrus 2.0 - AI voice assistant with VS Code integration"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [".venv", "cyrus-companion"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
